# quant_all_in_one

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: backtest.yaml  data.yaml  risk_limits.yaml
cpp/: README.md
cpp/benchmarks/: bench_event_engine.cpp  bench_factor_engine.cpp
cpp/bindings/: pybind_module.cpp
cpp/include/quantlab/: bsm.hpp  event_engine.hpp  factor_engine.hpp  optimizer.hpp  risk_engine.hpp
cpp/src/: bsm.cpp  event_engine.cpp  factor_engine.cpp  optimizer.cpp  risk_engine.cpp
cpp/tests/: test_bsm.cpp  test_factor_engine.cpp  test_optimizer.cpp
data/: README.md
data/schema/: bars.yaml  features.yaml  symbol_master.yaml
notebooks/: README.md
reports/: README.md
scripts/: check_data_contracts.py  export_notebook_reports.py
src/quantlab/: __init__.py
src/quantlab/backtest/: __init__.py  event_driven.py  performance.py  vectorized.py
src/quantlab/crypto/: __init__.py  ccxt_client.py  funding.py  orderbook.py
src/quantlab/data/: __init__.py  calendars.py  corporate_actions.py  point_in_time.py
src/quantlab/derivatives/: __init__.py  bsm.py  quantlib_adapter.py
src/quantlab/features/: __init__.py  factors.py  labels.py  neutralize.py
src/quantlab/models/: __init__.py  inference.py  train.py  validation.py
src/quantlab/portfolio/: __init__.py  constraints.py  costs.py  optimizer.py
src/quantlab/reports/: __init__.py  tear_sheet.py
src/quantlab/risk/: __init__.py  factor_model.py  limits.py  stress.py  var_es.py
tests/: test_backtest_accounting.py  test_data_no_leakage.py  test_derivatives.py  test_features.py  test_portfolio_constraints.py
