[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-all-in-one"
version = "0.1.0"
description = "Unified quant research, reproduction, reporting, and C++ core lab."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=16",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
research = [
  "cvxpy>=1.5",
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.9",
  "nbconvert>=7.16",
  "plotly>=5.22",
  "pyportfolioopt>=1.5.6",
  "seaborn>=0.13",
  "vectorbt>=0.26",
  "yfinance>=0.2",
]
ml = [
  "lightgbm>=4.4",
  "optuna>=3.6",
  "scikit-learn>=1.5",
  "xgboost>=2.1",
]
crypto = ["ccxt>=4.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["ccxt.*", "QuantLib.*", "pandas.*", "numpy.*", "scipy.*", "statsmodels.*"]
ignore_missing_imports = true
